--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,13 +43,16 @@
             style="@style/standardText"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_search_movie_result"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ev_movie_search"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/layout_movie_item"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
